k8s-rpi-apps-ingress/hass-ingress/hass-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-shared
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/version: "2021.6.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 8123
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-shared
  annotations:
    avp.kubernetes.io/path: "k8secrets/ingresses"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: <hasshostname>.<domainname>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: home-assistant-shared
              port:
                number: 8123
